k8s/namespaces/nginx/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: nginx
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
