k8s/namespaces/nginx/01-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx
  namespace: nginx
spec:
  ingress:
    - from:
      ports:
      - port: 80
        protocol: TCP
      - port: 443
        protocol: TCP
  podSelector:
    matchLabels:
      k8s-app: nginx
  policyTypes:
  - Ingress
