k8s/namespaces/nginx/01-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx
  namespace: nginx
spec:
  ingress:
    - from:
      ports:
      - port: 80
        protocol: TCP
      - port: 443
        protocol: TCP
  egress:
    - to:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/part-of: ingress-nginx
  policyTypes:
  - Ingress
  - Egress
